@@ -10,7 +10,9 @@ import com.databricks.sdk.core.DatabricksException;
 import com.databricks.sdk.core.oauth.OpenIDConnectEndpoints;
 import java.net.MalformedURLException;
 import java.nio.ByteBuffer;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 
 /** TestConstants class contains all the constants that are used in the test classes. */
 public class TestConstants {
@@ -36,6 +38,10 @@ public class TestConstants {
   public static final StatementId TEST_STATEMENT_ID = new StatementId("statement_id");
   public static final String UC_VOLUME_CATALOG = "uc_volume_test_catalog";
   public static final String UC_VOLUME_SCHEMA = "uc_volume_test_schema";
+  public static final String TEST_SCOPE_STRING = "URI:RS:000001:000999:DatabricksOAuth:TEST";
+
+  public static final String DEFAULT_BENCHFOOD_HOST = "e2-benchfood.cloud.databricks.com";
+  public static final String DEFAULT_BENCHFOOD_HTTP_PATH = "/sql/1.0/warehouses/6e681b20741e4674";
 
   public static final TSessionHandle SESSION_HANDLE =
       new TSessionHandle().setSessionId(new THandleIdentifier().setGuid(SESSION_ID.getBytes()));
@@ -70,19 +76,18 @@ public class TestConstants {
           + "UserAgentEntry=MyApp";
 
   public static final List<ByteBuffer> BINARY_ROW_SET_VALUES =
-      Collections.singletonList(ByteBuffer.wrap(TEST_STRING.getBytes()));
-  public static final List<Boolean> BOOL_ROW_SET_VALUES = Arrays.asList(false, true, false, true);
+      List.of(ByteBuffer.wrap(TEST_STRING.getBytes()));
+  public static final List<Boolean> BOOL_ROW_SET_VALUES = List.of(false, true, false, true);
   public static final List<Byte> BYTE_ROW_SET_VALUES =
-      Arrays.asList((byte) 5, (byte) 4, (byte) 3, (byte) 2, (byte) 1);
-  public static final List<Double> DOUBLE_ROW_SET_VALUES =
-      Arrays.asList(1.0, 2.0, 3.0, 4.0, 5.0, 6.0);
+      List.of((byte) 5, (byte) 4, (byte) 3, (byte) 2, (byte) 1);
+  public static final List<Double> DOUBLE_ROW_SET_VALUES = List.of(1.0, 2.0, 3.0, 4.0, 5.0, 6.0);
   public static final List<Short> SHORT_ROW_SET_VALUES =
-      Arrays.asList((short) 1, (short) 2, (short) 3, (short) 4);
-  public static final List<Integer> INT_ROW_SET_VALUES = Arrays.asList(143, 243, 343, 443);
+      List.of((short) 1, (short) 2, (short) 3, (short) 4);
+  public static final List<Integer> INT_ROW_SET_VALUES = List.of(143, 243, 343, 443);
   public static final List<Long> LONG_ROW_SET_VALUES =
-      Arrays.asList(1344343433L, 243433343443L, 3434343433443L, 443434343434L);
+      List.of(1344343433L, 243433343443L, 3434343433443L, 443434343434L);
   public static final List<String> STRING_ROW_SET_VALUES =
-      Arrays.asList(TEST_STRING, TEST_STRING, TEST_STRING);
+      List.of(TEST_STRING, TEST_STRING, TEST_STRING);
 
   public static final TRowSet BINARY_ROW_SET =
       new TRowSet()
@@ -127,7 +132,7 @@ public class TestConstants {
 
   public static final int MIXED_ROW_SET_COUNT =
       Collections.min(
-          Arrays.asList(
+          List.of(
               BYTE_ROW_SET_VALUES.size(),
               DOUBLE_ROW_SET_VALUES.size(),
               STRING_ROW_SET_VALUES.size()));
@@ -135,7 +140,7 @@ public class TestConstants {
   public static final TRowSet MIXED_ROW_SET =
       new TRowSet()
           .setColumns(
-              Arrays.asList(
+              List.of(
                   TColumn.byteVal(
                       new TByteColumn()
                           .setValues(BYTE_ROW_SET_VALUES.subList(0, MIXED_ROW_SET_COUNT))),
@@ -198,7 +203,7 @@ public class TestConstants {
   public static final String VALID_URL_3 =
       "jdbc:databricks://sample-host.cloud.databricks.com:9999/default;transportMode=http;"
           + "ssl=0;AuthMech=3;httpPath=/sql/1.0/warehouses/9999999999999999;EnableQueryResultLZ4Compression=0;"
-          + "UseThriftClient=1;LogLevel=1234";
+          + "UseThriftClient=1;LogLevel=1234;Auth_scope=URI:RS:000001:000999:DatabricksOAuth:TEST";
 
   public static final String VALID_URL_4 =
       "jdbc:databricks://sample-host.cloud.databricks.com:9999/default;AuthMech=3;"
