@@ -15,14 +15,16 @@ import com.databricks.jdbc.dbclient.IDatabricksHttpClient;
 import com.databricks.jdbc.exception.DatabricksHttpException;
 import com.databricks.jdbc.exception.DatabricksSQLException;
 import com.databricks.jdbc.model.core.ResultManifest;
+import com.databricks.jdbc.model.core.ResultSchema;
 import com.databricks.jdbc.model.telemetry.enums.DatabricksDriverErrorCode;
-import com.databricks.sdk.service.sql.ResultSchema;
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.FileInputStream;
+import java.nio.file.Files;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Stream;
 import org.apache.http.StatusLine;
 import org.apache.http.client.methods.CloseableHttpResponse;
@@ -77,7 +79,13 @@ public class VolumeOperationResultTest {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
-    when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_GET);
+    String localGet = "getVolFile_" + UUID.randomUUID() + ".csv";
+    // Ensure no leftover from previous runs
+    File pre = new File(localGet);
+    if (pre.exists()) {
+      pre.delete();
+    }
+    when(resultHandler.getObject(3)).thenReturn(localGet);
     when(mockHttpClient.execute(isA(HttpGet.class))).thenReturn(httpResponse);
     when(httpResponse.getEntity()).thenReturn(new StringEntity("test"));
     when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
@@ -95,16 +103,10 @@ public class VolumeOperationResultTest {
     assertFalse(volumeOperationResult.hasNext());
     assertFalse(volumeOperationResult.next());
 
-    File file = new File(LOCAL_FILE_GET);
+    File file = new File(localGet);
     assertTrue(file.exists());
     try (FileInputStream fis = new FileInputStream(file)) {
-      java.io.ByteArrayOutputStream baos = new java.io.ByteArrayOutputStream();
-      byte[] buf = new byte[8192];
-      int n;
-      while ((n = fis.read(buf)) != -1) {
-        baos.write(buf, 0, n);
-      }
-      String fileContent = new String(baos.toByteArray());
+      String fileContent = new String(fis.readAllBytes());
       assertEquals("test", fileContent);
     } finally {
       assertTrue(file.delete());
@@ -116,11 +118,7 @@ public class VolumeOperationResultTest {
   public void testGetResult_InputStream_Get(String propertyValue, boolean expected)
       throws Exception {
     setupCommonInteractions();
-    {
-      java.util.HashMap<String, String> __m = new java.util.HashMap<String, String>();
-      __m.put(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue);
-      buildClientInfoProperties(__m);
-    }
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue));
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
@@ -132,16 +130,23 @@ public class VolumeOperationResultTest {
     }
 
     when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     if (expected) {
+      VolumeOperationResult volumeOperationResult =
+          new VolumeOperationResult(
+              RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
+      assertTrue(volumeOperationResult.hasNext());
+      assertEquals(-1, volumeOperationResult.getCurrentRow());
       assertSuccessVolumeGetOperations(volumeOperationResult);
     } else {
-      assertFailedStreamVolumeOperations(volumeOperationResult);
+      try {
+        new VolumeOperationResult(
+            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
+        fail("Should throw DatabricksSQLException");
+      } catch (DatabricksSQLException e) {
+        assertEquals(
+            "Volume operation status : ABORTED, Error message: enableVolumeOperations property mandatory for Volume operations on stream",
+            e.getMessage());
+      }
     }
   }
 
@@ -156,14 +161,8 @@ public class VolumeOperationResultTest {
             new DatabricksSQLException(
                 "statement closed", DatabricksDriverErrorCode.INVALID_STATE));
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals("statement closed", e.getMessage());
@@ -182,20 +181,13 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(2)).thenReturn(HEADERS);
     when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_GET);
-    java.util.Map<String, String> m = new java.util.HashMap<String, String>();
-    m.put(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), "");
-    when(session.getClientInfoProperties()).thenReturn(m);
+    when(session.getClientInfoProperties())
+        .thenReturn(Map.of(ALLOWED_VOLUME_INGESTION_PATHS.toLowerCase(), ""));
     when(session.getConnectionContext()).thenReturn(context);
     when(context.getVolumeOperationAllowedPaths()).thenReturn("");
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -210,14 +202,8 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("localFileOther");
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -232,14 +218,8 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("getvolfile.csv");
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -254,14 +234,8 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("");
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -275,19 +249,14 @@ public class VolumeOperationResultTest {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
-    when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_GET);
+    String localGet = "getVolFile_" + UUID.randomUUID() + ".csv";
+    when(resultHandler.getObject(3)).thenReturn(localGet);
 
-    File file = new File(LOCAL_FILE_GET);
-    java.nio.file.Files.write(file.toPath(), "test-put".getBytes());
+    File file = new File(localGet);
+    Files.writeString(file.toPath(), "test-put");
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -305,14 +274,8 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("../newFile.csv");
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -326,19 +289,14 @@ public class VolumeOperationResultTest {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
-    when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_GET);
+    String localGet = "getVolFile_" + UUID.randomUUID() + ".csv";
+    when(resultHandler.getObject(3)).thenReturn(localGet);
     when(mockHttpClient.execute(isA(HttpGet.class))).thenReturn(httpResponse);
     when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
     when(mockedStatusLine.getStatusCode()).thenReturn(403);
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -358,7 +316,7 @@ public class VolumeOperationResultTest {
     when(mockedStatusLine.getStatusCode()).thenReturn(200);
 
     File file = new File(LOCAL_FILE_PUT);
-    java.nio.file.Files.write(file.toPath(), "test-put".getBytes());
+    Files.writeString(file.toPath(), "test-put");
 
     VolumeOperationResult volumeOperationResult =
         new VolumeOperationResult(
@@ -379,11 +337,7 @@ public class VolumeOperationResultTest {
   public void testGetResult_Put_withInputStream(String propertyValue, boolean expected)
       throws Exception {
     setupCommonInteractions();
-    {
-      java.util.HashMap<String, String> __m = new java.util.HashMap<String, String>();
-      __m.put(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue);
-      buildClientInfoProperties(__m);
-    }
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), propertyValue));
     when(resultHandler.getObject(0)).thenReturn("PUT");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
@@ -396,39 +350,36 @@ public class VolumeOperationResultTest {
     when(statement.getInputStreamForUCVolume())
         .thenReturn(new InputStreamEntity(new ByteArrayInputStream("test-put".getBytes()), 10L));
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
     if (expected) {
+      VolumeOperationResult volumeOperationResult =
+          new VolumeOperationResult(
+              RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       assertSuccessVolumePutOperations(volumeOperationResult);
     } else {
-      assertFailedStreamVolumeOperations(volumeOperationResult);
+      try {
+        new VolumeOperationResult(
+            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
+        fail("Should throw DatabricksSQLException");
+      } catch (DatabricksSQLException e) {
+        assertEquals(
+            "Volume operation status : ABORTED, Error message: enableVolumeOperations property mandatory for Volume operations on stream",
+            e.getMessage());
+      }
     }
   }
 
   @Test
   public void testGetResult_Put_withNullInputStream() throws Exception {
     setupCommonInteractions();
-    {
-      java.util.HashMap<String, String> __m = new java.util.HashMap<String, String>();
-      __m.put(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "True");
-      buildClientInfoProperties(__m);
-    }
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "True"));
     when(resultHandler.getObject(0)).thenReturn("PUT");
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn("__input_stream__");
     when(statement.isAllowedInputStreamForVolumeOperation()).thenReturn(true);
     when(statement.getInputStreamForUCVolume()).thenReturn(null);
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
-
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -449,15 +400,8 @@ public class VolumeOperationResultTest {
             new DatabricksSQLException(
                 "statement closed", DatabricksDriverErrorCode.INVALID_STATE));
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
-
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals("statement closed", e.getMessage());
@@ -475,17 +419,10 @@ public class VolumeOperationResultTest {
     when(mockedStatusLine.getStatusCode()).thenReturn(403);
 
     File file = new File(LOCAL_FILE_PUT);
-    java.nio.file.Files.write(
-        file.toPath(), "test-put".getBytes(java.nio.charset.StandardCharsets.UTF_8));
+    Files.writeString(file.toPath(), "test-put");
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -504,16 +441,10 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_PUT);
 
     File file = new File(LOCAL_FILE_PUT);
-    java.nio.file.Files.write(file.toPath(), new byte[0]);
+    Files.writeString(file.toPath(), "");
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -530,14 +461,8 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_PUT);
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -553,14 +478,8 @@ public class VolumeOperationResultTest {
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_PUT);
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -573,11 +492,7 @@ public class VolumeOperationResultTest {
   public void testGetResult_Remove() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
-    {
-      java.util.HashMap<String, String> __m = new java.util.HashMap<String, String>();
-      __m.put(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1");
-      buildClientInfoProperties(__m);
-    }
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
@@ -599,7 +514,7 @@ public class VolumeOperationResultTest {
       volumeOperationResult.getObject(2);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Invalid column access", e.getMessage());
+      assertTrue(e.getMessage().contains("Invalid column access"));
     }
   }
 
@@ -630,12 +545,12 @@ public class VolumeOperationResultTest {
     }
 
     when(session.getConnectionContext()).thenReturn(context);
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     if (expected) {
+      VolumeOperationResult volumeOperationResult =
+          new VolumeOperationResult(
+              RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
+      assertTrue(volumeOperationResult.hasNext());
+      assertEquals(-1, volumeOperationResult.getCurrentRow());
       assertTrue(volumeOperationResult.next());
       assertEquals(0, volumeOperationResult.getCurrentRow());
       assertEquals("SUCCEEDED", volumeOperationResult.getObject(0));
@@ -645,11 +560,12 @@ public class VolumeOperationResultTest {
         volumeOperationResult.getObject(2);
         fail("Should throw DatabricksSQLException");
       } catch (DatabricksSQLException e) {
-        assertEquals("Invalid column access", e.getMessage());
+        assertTrue(e.getMessage().contains("Invalid column access"));
       }
     } else {
       try {
-        volumeOperationResult.next();
+        new VolumeOperationResult(
+            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
         fail("Should throw DatabricksSQLException");
       } catch (DatabricksSQLException e) {
         assertEquals(
@@ -663,58 +579,35 @@ public class VolumeOperationResultTest {
   public void testGetResult_RemoveFailed() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
-    {
-      java.util.HashMap<String, String> __m = new java.util.HashMap<String, String>();
-      __m.put(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1");
-      buildClientInfoProperties(__m);
-    }
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class))).thenReturn(httpResponse);
     when(httpResponse.getStatusLine()).thenReturn(mockedStatusLine);
     when(mockedStatusLine.getStatusCode()).thenReturn(403);
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
-
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
           "Volume operation status : FAILED, Error message: Failed to delete volume",
           e.getMessage());
     }
-    assertDoesNotThrow(volumeOperationResult::close);
   }
 
   @Test
   public void testGetResult_RemoveFailedWithException() throws Exception {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("REMOVE");
-    {
-      java.util.HashMap<String, String> __m = new java.util.HashMap<String, String>();
-      __m.put(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1");
-      buildClientInfoProperties(__m);
-    }
+    buildClientInfoProperties(Map.of(ENABLE_VOLUME_OPERATIONS.toLowerCase(), "1"));
     when(resultHandler.getObject(1)).thenReturn(PRESIGNED_URL);
     when(resultHandler.getObject(3)).thenReturn(null);
     when(mockHttpClient.execute(isA(HttpDelete.class)))
         .thenThrow(
             new DatabricksHttpException("exception", DatabricksDriverErrorCode.INVALID_STATE));
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
-
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -733,7 +626,7 @@ public class VolumeOperationResultTest {
       volumeOperationResult.getObject(2);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
-      assertEquals("Invalid row access", e.getMessage());
+      assertTrue(e.getMessage().contains("Invalid row access"));
     }
   }
 
@@ -742,16 +635,11 @@ public class VolumeOperationResultTest {
     setupCommonInteractions();
     when(resultHandler.getObject(0)).thenReturn("GET");
     when(resultHandler.getObject(1)).thenReturn("");
-    when(resultHandler.getObject(3)).thenReturn(LOCAL_FILE_GET);
+    String localGet = "getVolFile_" + UUID.randomUUID() + ".csv";
+    when(resultHandler.getObject(3)).thenReturn(localGet);
 
-    VolumeOperationResult volumeOperationResult =
-        new VolumeOperationResult(
-            RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
-
-    assertTrue(volumeOperationResult.hasNext());
-    assertEquals(-1, volumeOperationResult.getCurrentRow());
     try {
-      volumeOperationResult.next();
+      new VolumeOperationResult(RESULT_MANIFEST, session, resultHandler, mockHttpClient, statement);
       fail("Should throw DatabricksSQLException");
     } catch (DatabricksSQLException e) {
       assertEquals(
@@ -780,16 +668,10 @@ public class VolumeOperationResultTest {
     assertFalse(volumeOperationResult.next());
 
     assertNotNull(volumeOperationResult.getVolumeOperationInputStream());
-    {
-      java.io.InputStream __in = volumeOperationResult.getVolumeOperationInputStream().getContent();
-      java.io.ByteArrayOutputStream __baos = new java.io.ByteArrayOutputStream();
-      byte[] __buf = new byte[8192];
-      int __n;
-      while ((__n = __in.read(__buf)) != -1) {
-        __baos.write(__buf, 0, __n);
-      }
-      assertEquals("test", new String(__baos.toByteArray()));
-    }
+    assertEquals(
+        "test",
+        new String(
+            volumeOperationResult.getVolumeOperationInputStream().getContent().readAllBytes()));
   }
 
   private void assertFailedStreamVolumeOperations(VolumeOperationResult volumeOperationResult) {
@@ -806,7 +688,7 @@ public class VolumeOperationResultTest {
   private void setupCommonInteractions() throws Exception {
     when(resultHandler.hasNext())
         .thenReturn(true)
-        .thenReturn(true)
+        .thenReturn(false)
         .thenReturn(false)
         .thenReturn(false);
     when(resultHandler.next()).thenReturn(true).thenReturn(false);
