@@ -7,6 +7,7 @@ import com.databricks.jdbc.api.internal.IDatabricksConnectionContext;
 import com.databricks.jdbc.exception.DatabricksRetryHandlerException;
 import java.io.IOException;
 import java.time.Instant;
+import java.util.List;
 import org.apache.http.HttpResponse;
 import org.apache.http.HttpStatus;
 import org.apache.http.ProtocolVersion;
@@ -35,8 +36,7 @@ public class UCVolumeHttpRetryHandlerTest {
   @Test
   void processUCVolumeRequestWithNonRetryableStatusCode() throws IOException {
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(
-            java.util.Arrays.asList(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
+        .thenReturn(List.of(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
 
     HttpResponse response = createResponse(HttpStatus.SC_OK);
     retryHandler.process(response, httpContext);
@@ -47,8 +47,7 @@ public class UCVolumeHttpRetryHandlerTest {
   @Test
   void processUCVolumeRequestWithRetryableStatusCode() throws IOException {
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(
-            java.util.Arrays.asList(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
+        .thenReturn(List.of(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
 
     HttpResponse response = createResponse(HttpStatus.SC_BAD_REQUEST);
     retryHandler.process(response, httpContext);
@@ -59,8 +58,7 @@ public class UCVolumeHttpRetryHandlerTest {
   @Test
   void retryUCVolumeRequestWithNonRetryableStatusCode() throws Exception {
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(
-            java.util.Arrays.asList(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
+        .thenReturn(List.of(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
 
     IOException exception = new DatabricksRetryHandlerException("Test", HttpStatus.SC_BAD_GATEWAY);
     assertFalse(retryHandler.retryRequest(exception, 1, httpContext));
@@ -69,8 +67,7 @@ public class UCVolumeHttpRetryHandlerTest {
   @Test
   void retryUCVolumeRequestWithRetryableStatusCodeTimeout() throws Exception {
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(
-            java.util.Arrays.asList(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
+        .thenReturn(List.of(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
     when(mockConnectionContext.getUCIngestionRetryTimeoutSeconds()).thenReturn(60);
 
     httpContext.setAttribute(
@@ -84,8 +81,7 @@ public class UCVolumeHttpRetryHandlerTest {
   @Test
   void retryUCVolumeRequestWithRetryableStatusCode() throws Exception {
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(
-            java.util.Arrays.asList(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
+        .thenReturn(List.of(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
     when(mockConnectionContext.getUCIngestionRetryTimeoutSeconds()).thenReturn(120);
 
     httpContext.setAttribute(
@@ -99,8 +95,7 @@ public class UCVolumeHttpRetryHandlerTest {
   @Test
   void testUCVolumeRetryTimeout() throws IOException {
     when(mockConnectionContext.getUCIngestionRetriableHttpCodes())
-        .thenReturn(
-            java.util.Arrays.asList(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
+        .thenReturn(List.of(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_REQUEST));
     when(mockConnectionContext.getUCIngestionRetryTimeoutSeconds()).thenReturn(10);
 
     httpContext.setAttribute(UCVolumeHttpRetryHandler.RETRY_START_TIME_KEY, Instant.now());
